# ofx-parse

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
src/: de.rs  error.rs  lib.rs  ofx.rs
src/de/: sgml.rs
src/de/sgml/: map.rs  seq.rs  sum.rs
src/ofx/: header.rs
src/parse/: sgml.rs
src/parse/sgml/: element.rs  header.rs
tests/: main.rs
tests/data/v102/: signon_response__all_fields.ofx
