[package]
name = "ofx-parse"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0.0"
nom-language = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
time = { version = "0.3.41" }

[dev-dependencies]
test-case = "3.3.1"
time = { version = "0.3.41", features = ["macros"] }
